team management css done

--- a/app/styles/general.scss
+++ b/app/styles/general.scss
@@ -272,3 +272,17 @@ h2 {
     }
   }
 }
+
+
+.webkit-grab {
+  cursor: -webkit-grab;
+}
+.webkit-grabbing {
+  cursor: -webkit-grabbing
+}
+.moz-grab {
+  cursor: -moz-grab;
+}
+.moz-grabbing {
+  cursor: -moz-grabbing
+}
