--- a/app/styles/league.scss
+++ b/app/styles/league.scss
@@ -7,7 +7,11 @@
 
     &.single_option {
       margin: 2.5em auto 0 auto !important;
-      text-align: center;
+
+      li {
+        width: 100%;
+        margin-right: 0 !important;
+      }
     }
 
     li {
@@ -50,6 +54,30 @@
         span {
         }
       }
+    }
+  }
+  .current_teams {
+    margin-top: 2.5em;
+
+    .current_team {
+      color: white;
+      text-transform: uppercase;
+      margin-bottom: 1em;
+
+      &>div, h5 {
+        background: $darker_2;
+      }
+
+      h5 {
+        margin: 0;
+        height: 50px;
+        padding-top: 15px;
+      }
+    }
+
+    &>h3 {
+      color: #fff;
+      margin-top: 3em;
     }
   }
 
@@ -115,7 +143,6 @@
       }
     }
   }
-
   .draft-filter {
     padding-left: 5px !important;
 
@@ -156,7 +183,6 @@
       outline: none;
     }
   }
-
   #team_management {
     .title {
       color: white;
