--- a/app/styles/league.scss
+++ b/app/styles/league.scss
@@ -7,6 +7,10 @@
 
     &.single_option {
       margin: 2.5em auto 0 auto !important;
+    }
+
+    &.invite-state {
+      margin: 2.5em auto 0 auto !important;
 
       li {
         width: 100%;
