--- a/app/views/league_menu.view.html
+++ b/app/views/league_menu.view.html
@@ -59,7 +59,7 @@
 <div class="col-xs-8 current_teams" ng-show="me == league.creator && league.state=='INVITE'">
   <div class="col-xs-4 no-padding current_team" ng-repeat="user in league.users">
     <div class="col-xs-3 no-padding">
-      <img ng-if="user.picture" width="50" height="50" src = "{{ user.picture }}" alt = ""/>
+      <img ng-if="user.picture" width="50" height="50" ng-src = "{{user.picture}}" alt = ""/>
       <img ng-if="!user.picture" width="50" height="50" src = "../images/avatar.jpg" alt = ""/>
     </div>
     <h5 class="col-xs-9">{{ user.name }}</h5>
@@ -70,7 +70,7 @@
 <div class="col-xs-12 current_teams" ng-show="me != league.creator && league.state=='INVITE'">
   <div class="col-xs-3 current_team" ng-repeat="user in league.users">
     <div class="col-xs-3 no-padding">
-      <img ng-if="user.picture" width="50" height="50" src = "{{ user.picture }}" alt = ""/>
+      <img ng-if="user.picture" width="50" height="50" ng-src = "{{user.picture}}" alt = ""/>
       <img ng-if="!user.picture" width="50" height="50" src = "../images/avatar.jpg" alt = ""/>
     </div>
     <h5 class="col-xs-9">{{ user.name }}</h5>
