--- a/app/views/home.view.html
+++ b/app/views/home.view.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive" id="league_creation_img">
+          <img src="http://i.imgur.com/nlccOs5.png" class="img-responsive" id="league_creation_img">
         </div>
         <div class="col-md-6">
           <h1 class="text-primary">Cria a tua liga</h1>
@@ -49,12 +49,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive" id="league_creation_img">
+          <img src="http://i.imgur.com/FDLJ9of.png" class="img-responsive" id="league_creation_img">
         </div>
         <div class="col-md-6">
-          <h1 class="text-primary">Cria a tua liga</h1>
+          <h1 class="text-primary">Gere a tua equipa</h1>
 
-          <p class="text">No Bitleague tens oportunidade de criar uma liga, convidar os teus amigos para se juntarem e escolher as regras com que jogas. &nbsp;</p>
+          <p class="text">Depois do draft, gere e customiza a tua equipa para cada jornada.
+            Vais ser pontuado com base nos resultados reais dos jogadores da tua equipa.
+            Presenças no onze inicial e golos são valorizados enquanto faltas e expulsões são penalisadas. &nbsp;</p>
         </div>
       </div>
     </div>
